<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/doctor" />
	    
	    <TextView
	        android:id="@+id/doctorName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="" />
	</LinearLayout>
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/last_sync" />
	    
	    <TextView
	        android:id="@+id/lastSync"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="" />
	</LinearLayout>
    
    
    
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
			<Button
			         android:id="@+id/btnAlarms"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_weight="1"
			         android:text="@string/show_alarms" />
			     
			<Button
			         android:id="@+id/btnPatients"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_weight="1"
			         android:text="@string/patients_list" />
	</LinearLayout>
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
			<Button
			         android:id="@+id/btnCheckins"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_weight="1"
			         android:text="@string/checkins_list" />
			     
			<Button
			         android:id="@+id/btnSynchronize"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_weight="1"
			         android:text="@string/action_synchronize" />
	</LinearLayout>
    

</LinearLayout>
