<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
    	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
		
    	 <CheckBox
		        android:id="@+id/checkMedication"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        android:checked="true"
		        android:text="@string/question_medication" />
		 
		 <View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	
		 <TextView
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_gravity="center"
		     android:text="@string/question_time_medication" />
	
		
		 <TextView
		    android:id="@+id/medicationTime"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center" />
		 
		 <LinearLayout
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
			 
			 <Button
			     android:id="@+id/selectDate"
			     android:layout_width="0dp"
			     android:layout_height="wrap_content"
			     android:layout_weight="1"
			     android:text="@string/change_day" />
			 <Button
			     android:id="@+id/selectTime"
			     android:layout_width="0dp"
			     android:layout_height="wrap_content"
			     android:layout_weight="1"
			     android:text="@string/change_time" />
			 
		 </LinearLayout>
		 
		 <View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
		 </LinearLayout>
		
		 
		 <LinearLayout
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_alignParentBottom="true" >
			 <Button 
			     android:id="@+id/btnAcceptMedicationInfo"
			     android:layout_width="match_parent"
			     android:layout_height="wrap_content"
			     android:layout_weight="1"
			     android:text="@string/action_accept" />
			 <Button 
			     android:id="@+id/btnCancelMedicationInfo"
			     android:layout_width="match_parent"
			     android:layout_height="wrap_content"
			     android:layout_weight="1"
			     android:text="@string/action_cancel" />
		 </LinearLayout>
		 
	</RelativeLayout>

