<?xml version="1.0" encoding="utf-8"?>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
			
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1" 
			    android:paddingLeft="10dp"
			    android:text="@string/activate_alarm"/>
	
		    <CheckBox
		        android:id="@+id/alarmActivate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0" /> 
		    
		    
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
		  	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:paddingLeft="10dp"
		        android:text="@string/alarm_time" />
		  	<TextView
		        android:id="@+id/alarmTime"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0" />
	  	</LinearLayout>
	  	
	    
		 <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
		  	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:paddingLeft="10dp"
		        android:text="@string/alarm_vibrate" />
		  	<CheckBox
		        android:id="@+id/alarmVibrate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0" />
	  	</LinearLayout>
	 
	    <LinearLayout
	       android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	
		    <Button
		        android:id="@+id/btnSave"
		        android:layout_weight="1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/action_save"
		        android:enabled="true" />
		
		  	<Button
		        android:id="@+id/btnCancel"
		        android:layout_weight="1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/action_cancel"
		        android:enabled="true" />
		
	    	<Button
		        android:id="@+id/btnDelete"
		        android:layout_weight="1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/action_delete"
		        android:enabled="true" />
		
		</LinearLayout>
	</LinearLayout>